# megabonk_player

./: .gitignore  README.md  build_command.ps1  main.py  megabonk_player.spec  pyproject.toml  requirements.txt
