[project]
name = "megabonk-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.16.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.16.0",
    "setuptools>=80.9.0",
    "xlsxwriter>=3.2.9",
]
